# utility-boilerplate-qt

./: .clang-format  .cmake-format  .codecov.yml  .doxygen  .gitignore  .gitmodules  CMakeLists.txt  README.MD  README.ru.MD  annotated.html  dir_1820500cc02a8b352cff2a787666b0ee.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_96e2fec8ed15f3d3471e79acb1636ee0.html  dir_bfb95188c5bc9266817097b1b82390d6.html  hierarchy.html  index.html  main.cpp  mainwindow.cpp  mainwindow.hpp  menudata.js  texteditor.cpp  texteditor.hpp  texteditor.ui  texteditorsettings.cpp  texteditorsettings.hpp  utility_boilerplate_qt.qrc
.github/workflows/: style.yml  ubuntu-build.yml  ubuntu-tests.yml  ubuntu.yml  windows-build.yml
cmake/: gtest.cmake  utils.cmake
d0/d54/: class_main_window-members.html
d1/d7b/: class_utility_main_window.html
d3/d85/: class_u_b_event-members.html
d3/db1/: class_simple_setting_item-members.html
d3/ded/: class_text_editor_settings-members.html
d5/de0/: spinboxitem_8hpp_source.html
d6/d6f/: class_settings-members.html
d6/dd6/: class_text_item-members.html
d6/dd9/: class_combo_box_item_with_data-members.html
d6/df0/: class_separator_item-members.html
d9/d5c/: class_text_item.html
d9/d6c/: class_setting_item-members.html
da/d23/: texteditorsettings_8hpp_source.html
da/d80/: class_u_b_event.html
da/dfd/: class_simple_setting_item.html
db/d2b/: class_settings.html
db/da0/: class_text_editor_settings.html
de/d90/: class_separator_item.html
de/deb/: class_combo_box_item_with_data.html
df/d50/: mainwindow_8hpp_source.html
df/d6a/: class_spinbox_item.html
df/df6/: settingitem_8hpp_source.html
docs/: classes.html  dir_0b2b5b6562f11e414c47e6be9b58248d.html  dir_1ff95392bc4e65547c61a42698fda530.html  dynsections.js  files.html  functions.html  functions_func.html  functions_vars.html  index.html  jquery.js  menu.js  menudata.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js  search.js  searchdata.js
example/: mainwindow.hpp  texteditor.cpp  texteditor.hpp  texteditorsettings.cpp  texteditorsettings.hpp
example/tests/: CMakeLists.txt  test.cpp
i18n/: app_ru.qm
i18n/ru/: appcomp_ru.qm  appcomp_ru.ts
libs/utility_boilerplate_qt5/: CMakeLists.txt  LICENSE  helpers.cpp  helpers.hpp  utility_boilerplate_qt5.qrc  utilitymainwindow.cpp
libs/utility_boilerplate_qt5/tests/: CMakeLists.txt
libs/utility_boilerplate_qt5/tests/settings/items/: comboboxitemwdata_test.cpp  settingitems.cpp
res/images/: svg2ico.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_1.js  functions_10.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
src/: main.cpp
src/example/: mainwindow.cpp  mainwindow.hpp  texteditor.cpp  (+4 more)
src/example/tests/: CMakeLists.txt  fixtures.hpp  test.cpp
src/utility_boilerplate_qt5/: CMakeLists.txt  events.cpp  events.hpp  helpers.cpp  helpers.hpp  utilitymainwindow.cpp  utilitymainwindow.hpp
src/utility_boilerplate_qt5/i18n/ru/: ub5_ru.ts
src/utility_boilerplate_qt5/nvwa/: _nvwa.h  c++_features.h  debug_new.cpp  debug_new.h  fast_mutex.h
src/utility_boilerplate_qt5/nvwa/include/: debug_new
src/utility_boilerplate_qt5/settings/: settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.hpp
src/utility_boilerplate_qt5/settings/items/: checkboxitem.cpp  checkboxitem.hpp  comboboxitem.cpp  comboboxitem.hpp  comboboxitemwdata.cpp  comboboxitemwdata.hpp  separatoritem.cpp  separatoritem.hpp  spinboxitem.cpp  spinboxitem.hpp  textitem.cpp  textitem.hpp
src/utility_boilerplate_qt5/settings/items/abstract/: settingitem.hpp  simplesettingitem.hpp
src/utility_boilerplate_qt5/tests/: CMakeLists.txt  fixtures.hpp  helper_test.cpp  test.cpp  test.hpp  utilitymainwindow_test.cpp
src/utility_boilerplate_qt5/tests/settings/: comboboxitem_test.cpp  settings_test.cpp  settingsdialog_test.cpp
src/utility_boilerplate_qt5/tests/settings/items/: checkboxitem_test.cpp  comboboxitemwdata_test.cpp  separatoritem_test.cpp  settingitems.cpp  spinboxitem_test.cpp  textitem_test.cpp
tests/: CMakeLists.txt  test.cpp
utility_boilerplate_qt5/: CMakeLists.txt  helpers.cpp  helpers.hpp  settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.hpp  settingswidget.cpp  utility_boilerplate_qt5.qrc  utilitymainwindow.cpp  utilitymainwindow.hpp  utils.cmake
utility_boilerplate_qt5/cmake/: gtest.cmake  utils.cmake
utility_boilerplate_qt5/i18n/: ub5_ru.qm
utility_boilerplate_qt5/i18n/ru/: ub5_ru.ts
utility_boilerplate_qt5/languages/ts/: ub5_ru.ts
utility_boilerplate_qt5/nvwa/: _nvwa.h  c++_features.h  debug_new.cpp  debug_new.h  fast_mutex.h
utility_boilerplate_qt5/nvwa/include/: debug_new
utility_boilerplate_qt5/settings/: settings.cpp  settings.hpp  settingschangedevent.cpp  settingschangedevent.hpp  settingsdialog.cpp  settingsdialog.hpp  settingswidget.hpp
utility_boilerplate_qt5/settings/items/: checkboxitem.cpp  checkboxitem.hpp  comboboxitem.cpp  comboboxitem.hpp  comboboxitemwdata.cpp  comboboxitemwdata.hpp  dropdownitem.cpp  dropdownitem.hpp  separatoritem.cpp  separatoritem.hpp  settingitem.hpp  spinboxitem.cpp  spinboxitem.hpp  textitem.cpp  textitem.hpp  usersettingitem.hpp
utility_boilerplate_qt5/settings/items/abstract/: settingitem.hpp  simplesettingitem.hpp
utility_boilerplate_qt5/tests/: CMakeLists.txt  settingitems.cpp  test.cpp  test.hpp
utility_boilerplate_qt5/tests/settings/items/: comboboxitemwdata_test.cpp  settingitems.cpp
(+44 files in other folders)
